# SDLShooter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Game.cpp  Game.h  Scene.h  SceneMain.cpp  SceneMain.h
